# py-retrosheet

./: .gitignore  README  README.md  config.ini  db.ini  download.py  parse.py  pyproject.toml  requirements.txt  retrosheet.postgres.sql  retrosheet.py  retrosheet.sql
scripts/: config.ini  config.ini.dist  download.py  migration.py  parse.py  parse_csv.py  retrosheet_download.py  retrosheet_mysql.py  retrosheet_sql_tools.py
scripts/classes/: fetcher.py
scripts/external_data/: fgGuts.json  seamheads_parks.json
sql/: schema.postgres.sql  schema.sql  views.postgres.sql
