[tool.poetry]
name = "py-retrosheet"
version = "0.1.0"
description = ""
authors = ["Shinichi Nakagawa <spirits.is.my.rader@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
click = "^7.1.2"
ephem = "^3.7.7"
numpy = "^1.19.0"
pytz = "^2020.1"
requests = "^2.24.0"
SQLAlchemy = "^1.3.18"
tzwhere = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
